no longer shows scrollbar in searchbar

--- a/app/youtubeSearch/searchBar/searchBar.css
+++ b/app/youtubeSearch/searchBar/searchBar.css
@@ -10,4 +10,9 @@
 
 body {
 	background: transparent!important;
+	overflow: hidden;
+}
+
+html {
+	overflow: hidden;
 }
